# gilded-university-server

./: .editorconfig  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: tech-debt-request.md
.github/workflows/: fmt_test_lint.yml  integration_tests.yml  lint.yml  test.yml  unit_test.yml
entity/: Cargo.toml  lib.rs
entity/src/: mod.rs  sea_orm_active_enums.rs  traits.rs  user.rs
entity/src/traits/: mod.rs  role.rs  status.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
src/: auth.rs  errors.rs  lib.rs  main.rs  testutils.rs  time.rs
src/auth/: hash.rs  jwt.rs
src/graphql/: errors.rs  mod.rs  mutation.rs  query.rs  schema.rs  user.rs
src/graphql/mutation/: mod.rs  user.rs
src/graphql/mutation/tests/: user.rs
src/graphql/query/: mod.rs  user.rs
src/graphql/query/tests/: user.rs
src/models/: mod.rs  user.rs
tests/: test.rs
tests/common/: mod.rs
tests/database/: users.rs
tests/warp/: mod.rs
tests/warp/user/: mod.rs  user_integration.rs  user_mutation.rs  user_query.rs
