[package]
name = "gilded-university-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Benyakir Horowitz"]
readme = "README.md"

[dependencies]
juniper = "0.15.10"
juniper_warp = "0.7.0"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.18"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
warp = { version = "0.3.2", default-features = false }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
thiserror = "1.0"
jsonwebtoken = "8"
chrono = "0.4"
sodiumoxide = "0.2.7"