[package]
name = "gilded-university-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Benyakir Horowitz"]
readme = "README.md"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" } 
juniper = "0.15.10"
juniper_warp = "0.7.0"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.18"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
warp = { version = "0.3.2", default-features = false }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
dotenvy = "0.15"
thiserror = "1.0"
jsonwebtoken = "8"
pbkdf2 = "0.11"
rand_core = { version = "0.6", features = ["std"] }
